app/src/main/java/com/example/SupercCatApp/models/ApiReponse.kt
package com.example.SupercCatApp.models

import com.google.gson.annotations.SerializedName

data class ApiReponse (
    @SerializedName("results")
    val results: List<Cat> //error
){
}